Import of RPETTETT/Bio-Das-ProServer-2.6.tar.gz from CPAN.
gitpan-cpan-distribution: Bio-Das-ProServer
gitpan-cpan-version:      2.6
gitpan-cpan-path:         RPETTETT/Bio-Das-ProServer-2.6.tar.gz
gitpan-cpan-author:       RPETTETT
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -23,7 +23,18 @@ To install this module type the following:
    perl Makefile.PL
    make
    make test
-   make install
+
+RUNNING
+
+  To start the server, type:
+  eg/proserver
+
+  To stop:
+  kill -TERM `cat eg/proserver.myhostname.pid`
+
+  To restart:
+  kill -USR1 `cat eg/proserver.myhostname.pid`
+
 
 DEPENDENCIES
 
