Import of RPETTETT/Bio-Das-ProServer-2.9.tar.gz from CPAN.
gitpan-cpan-distribution: Bio-Das-ProServer
gitpan-cpan-version:      2.9
gitpan-cpan-path:         RPETTETT/Bio-Das-ProServer-2.9.tar.gz
gitpan-cpan-author:       RPETTETT
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -20,9 +20,12 @@ INSTALLATION
 
 To install this module type the following:
 
-   perl Makefile.PL
-   make
-   make test
+   perl Build.PL
+   ./Build
+   ./Build test
+
+You may receive warnings about missing dependencies, note that only
+some of these are required (see DEPENDENCIES section).
 
 RUNNING
 
